libuv up to v0.10.19 & compressed docs .css

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 C_ARGS = -g -Wall -O2
 CX = g++
 
-UV_VERSION=0.10.18
+UV_VERSION=0.10.19
 UV_BUILDTYPE=Release
 
 LIB = ../lib/libuv.a ../lib/libccf.a
@@ -41,7 +41,7 @@ uv/uv.h: ../deps/libuv.a
 	@echo "Dependency analysis ..."
 	@cd ../deps/; unzip libuv-$(UV_VERSION).zip > /dev/null; unzip gyp.zip > /dev/null; cd libuv-$(UV_VERSION)/; mkdir build; cd build/; mkdir gyp; cd gyp; cp -r ../../../gyp/* ./; cd ../../../../src/
 	@echo "Compiling libuv ..."
-	@cd ../deps/libuv-$(UV_VERSION)/; ./gyp_uv -f make > /dev/null; cd out/; make BUILDTYPE=$(UV_BUILDTYPE) > /dev/null; cd ../../../src/;
+	@cd ../deps/libuv-$(UV_VERSION)/; ./gyp_uv.py -f make > /dev/null; cd out/; make BUILDTYPE=$(UV_BUILDTYPE) > /dev/null; cd ../../../src/;
 	@cp ../deps/libuv-$(UV_VERSION)/out/$(UV_BUILDTYPE)/libuv.a $@
 	@echo "Compiled libuv"
 
