add recv body (support chunked) for http::get & add test for http::get

--- a/extensions/test/Makefile
+++ b/extensions/test/Makefile
@@ -2,13 +2,16 @@ C_ARGS = -g -Wall -O2
 CX = g++
 
 LIB = ../../lib/libuv.a ../../lib/libccf.a
-BIN = test_redis test_redis2
+BIN = test_redis test_redis2 test_http_get
 
 LIB_ARGS = -L../../lib -lccf -luv -lpthread -lrt
 INC_ARGS = -I../../include
 
 LIB_REDIS = ../../lib/libccf-redis.a
 LIB_REDIS_ARGS = -lccf-redis
+
+LIB_HTTP = ../../lib/libccf-http.a
+LIB_HTTP_ARGS = -lccf-http
 
 all: $(BIN)
 	
@@ -17,11 +20,17 @@ $(LIB):
 	
 $(LIB_REDIS):
 	make -C ../redis/
+
+$(LIB_HTTP):
+	make -C ../http/
 	
 test_redis: test_redis.cc $(LIB) $(LIB_REDIS)
-	$(CX) $(C_ARGS) -o $@ test_redis.cc $(LIB_ARGS) $(LIB_REDIS_ARGS) $(INC_ARGS)
+	$(CX) $(C_ARGS) -o $@ test_redis.cc $(LIB_REDIS_ARGS) $(LIB_ARGS) $(INC_ARGS)
 test_redis2: test_redis2.cc $(LIB) $(LIB_REDIS)
-	$(CX) $(C_ARGS) -o $@ test_redis2.cc $(LIB_ARGS) $(LIB_REDIS_ARGS) $(INC_ARGS)
+	$(CX) $(C_ARGS) -o $@ test_redis2.cc $(LIB_REDIS_ARGS) $(LIB_ARGS) $(INC_ARGS)
+
+test_http_get: test_http_get.cc $(LIB) $(LIB_HTTP)
+	$(CX) $(C_ARGS) -o $@ test_http_get.cc $(LIB_HTTP_ARGS) $(LIB_ARGS) $(INC_ARGS)
 
 .PHONY: clean
 clean:
