--- a/extensions/test/Makefile
+++ b/extensions/test/Makefile
@@ -2,7 +2,7 @@ C_ARGS = -g -Wall -O2
 CX = g++
 
 LIB = ../../lib/libuv.a ../../lib/libccf.a
-BIN = test_redis test_redis2 test_http_get
+BIN = test_redis test_redis2 test_http_get test_http_post
 
 LIB_ARGS = -L../../lib -lccf -luv -lpthread -lrt
 INC_ARGS = -I../../include
@@ -31,6 +31,8 @@ test_redis2: test_redis2.cc $(LIB) $(LIB_REDIS)
 
 test_http_get: test_http_get.cc $(LIB) $(LIB_HTTP)
 	$(CX) $(C_ARGS) -o $@ test_http_get.cc $(LIB_HTTP_ARGS) $(LIB_ARGS) $(INC_ARGS)
+test_http_post: test_http_post.cc $(LIB) $(LIB_HTTP)
+	$(CX) $(C_ARGS) -o $@ test_http_post.cc $(LIB_HTTP_ARGS) $(LIB_ARGS) $(INC_ARGS)
 
 .PHONY: clean
 clean:
